<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.emerchantpay.gateway.androidgenesissample.activities.MainActivity"
    tools:showIn="@layout/activity_main">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogoView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_logo_image"
            android:background="@drawable/genesis_logo"
            app:srcCompat="@drawable/genesis_logo"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/demoLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageLogoView"
            android:gravity="center"
            android:text="@string/demo_label" />

        <LinearLayout
            android:id="@+id/labelLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/demoLabel"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_home_labels"
                android:gravity="left"
                android:text="@string/privacy_policy_hyperlink" />

            <TextView
                android:id="@+id/terms_and_conditions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_home_labels"
                android:gravity="right"
                android:text="@string/terms_and_conditions_hyperlink" />

        </LinearLayout>

        <EditText
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/labelLayout"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/margin_logo_image"
            android:ems="10"
            android:hint="@string/username_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/usernameText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword" />

        <Spinner
            android:id="@+id/environmentSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/passwordText"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/endpointSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/environmentSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:spinnerMode="dropdown" />

        <Spinner
            android:id="@+id/languageSpinner"
            style="@style/Widget.AppCompat.Spinner.Underlined"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/endpointSpinner"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:spinnerMode="dropdown" />

        <TextView
            android:id="@+id/selectTransactionLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/languageSpinner"
            android:gravity="center"
            android:text="@string/select_transaction_label"
            android:textStyle="bold" />

        <ListView
            android:id="@+id/transactionTypesListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/selectTransactionLabel"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
